RAG with custom vector size qdrant

--- a/codes/rag/RAG_qdrant_disk.ipynb
+++ b/codes/rag/RAG_qdrant_disk.ipynb
@@ -3,10 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "560667b4",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "b95c0113",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -16,7 +14,7 @@
       "Processing:  https://github.com/\n",
       "Finished!\n",
       "Total url pased:  2\n",
-      "11604\n"
+      "24649\n"
      ]
     }
    ],
@@ -135,19 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f79ce979",
+   "execution_count": 9,
+   "id": "f5868f4b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "686e22862af040af9cc8d40c49a22fba",
+       "model_id": "6cc0825e5e37492fbef813cb5553a8f0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Partitioning text:   0%|          | 0/94 [00:00<?, ?it/s]"
+       "Partitioning text:   0%|          | 0/466 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -157,19 +155,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total partition count: 4\n",
-      "Model's embedding dimension: 3072\n"
+      "Total partition count: 8\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57d7707a29104e2b88fe56c97695b354",
+       "model_id": "c1fb9638a3ad48a9bdd8cda710cb2cb4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Fetching embeddings:   0%|          | 0/4 [00:00<?, ?it/s]"
+       "Generating embeddings:   0%|          | 0/8 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -179,19 +176,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Embeddings len: 4\n"
+      "Embeddings len: 8\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
-    "import aiohttp\n",
     "import numpy as np\n",
+    "from qdrant_client import QdrantClient, models\n",
     "from tqdm.notebook import tqdm\n",
+    "from sentence_transformers import SentenceTransformer\n",
     "\n",
     "qdrant_url = \"http://localhost:6333\"\n",
     "collection_name = \"github_collection\"\n",
     "VERBOSE = True\n",
+    "\n",
+    "client = QdrantClient(url=qdrant_url)\n",
+    "embedding_model = SentenceTransformer('all-MiniLM-L6-v2')\n",
     "\n",
     "def partition_text(text, max_length):\n",
     "    sentences = text.split('. ')\n",
@@ -209,162 +209,120 @@
     "        partitions.append('. '.join(current_part))\n",
     "    return partitions\n",
     "\n",
-    "async def get_embedding_shape():\n",
-    "    async with aiohttp.ClientSession() as session:\n",
-    "        payload = {\"model\": ollama_model_name}\n",
-    "        headers = {\"Content-Type\": \"application/json\"}\n",
-    "        async with session.post(ollama_url_inf, headers=headers, data=json.dumps(payload)) as response:\n",
-    "            if response.status == 200:\n",
-    "                result = await response.json()\n",
-    "                return result['model_info'][\"llama.embedding_length\"]\n",
-    "            else:\n",
-    "                print(f\"ERROR: Error from Ollama: {response.status}\")\n",
-    "                return 0\n",
+    "def get_embedding(text):\n",
+    "    return embedding_model.encode(text)\n",
     "\n",
-    "async def get_embeddings(partitions):\n",
-    "    embeddings = []\n",
-    "    async with aiohttp.ClientSession() as session:\n",
-    "        for partition in tqdm(partitions, desc=\"Fetching embeddings\"):\n",
-    "            payload = {\"model\": ollama_model_name, \"prompt\": partition}\n",
-    "            headers = {\"Content-Type\": \"application/json\"}\n",
-    "            async with session.post(ollama_url_emb, headers=headers, data=json.dumps(payload)) as response:\n",
-    "                if response.status == 200:\n",
-    "                    result = await response.json()\n",
-    "                    embeddings.append(np.array(result.get('embedding', np.zeros(768))))\n",
-    "                else:\n",
-    "                    print(f\"ERROR: Error from Ollama: {response.status}\")\n",
-    "                    embeddings.append(np.zeros(768))\n",
-    "    return embeddings\n",
+    "def create_collection(dimension):\n",
+    "    try:\n",
+    "        client.delete_collection(collection_name=collection_name)\n",
+    "    except Exception:\n",
+    "        pass\n",
     "\n",
-    "async def create_collection_rest(dimension):\n",
-    "    url = f\"{qdrant_url}/collections/{collection_name}\"\n",
-    "    payload = {\n",
-    "        \"vectors\": {\n",
-    "            \"size\": dimension,\n",
-    "            \"distance\": \"Cosine\"\n",
-    "        }\n",
-    "    }\n",
+    "    client.create_collection(\n",
+    "        collection_name=collection_name,\n",
+    "        vectors_config=models.VectorParams(size=dimension, distance=models.Distance.COSINE),\n",
+    "    )\n",
     "    \n",
-    "    async with aiohttp.ClientSession() as session:\n",
-    "        # Delete existing collection if exists\n",
-    "        async with session.delete(url) as response:\n",
-    "            if response.status not in [200, 404]:  # Ignore 404 as it means collection does not exist\n",
-    "                print(f\"Error deleting collection: {response.status}\")\n",
-    "        \n",
-    "        # Create new collection\n",
-    "        async with session.put(url, json=payload) as response:\n",
-    "            if response.status != 200:\n",
-    "                print(f\"Error creating collection: {response.status}\")\n",
-    "            return response.status\n",
-    "\n",
-    "async def upsert_points_rest(embeddings, partitions):\n",
-    "    url = f\"{qdrant_url}/collections/{collection_name}/points\"\n",
+    "def upsert_points(embeddings, partitions):\n",
     "    points = [\n",
-    "        {\"id\": i, \"vector\": embedding.tolist(), \"payload\": {\"text\": partition}}\n",
+    "        models.PointStruct(id=i, vector=embedding.tolist(), payload={\"text\": partition})\n",
     "        for i, (embedding, partition) in enumerate(zip(embeddings, partitions))\n",
     "    ]\n",
-    "    payload = {\"points\": points}\n",
+    "    client.upsert(collection_name=collection_name, points=points)\n",
     "\n",
-    "    async with aiohttp.ClientSession() as session:\n",
-    "        async with session.put(url, json=payload) as response:\n",
-    "            if response.status != 200:\n",
-    "                print(f\"Error upserting points: {response.status}\")\n",
-    "            return response.status\n",
-    "\n",
-    "async def store_in_qdrant(partitions):\n",
-    "    dimension = await get_embedding_shape()\n",
-    "    if VERBOSE:\n",
-    "        print(f\"Model's embedding dimension: {dimension}\")\n",
-    "\n",
-    "    await create_collection_rest(dimension)\n",
-    "    embeddings = await get_embeddings(partitions)\n",
+    "def store_in_qdrant(partitions):\n",
+    "    dimension = 384  # Dimension for 'all-MiniLM-L6-v2'\n",
+    "    create_collection(dimension)\n",
+    "    embeddings = [get_embedding(partition) for partition in tqdm(partitions, desc=\"Generating embeddings\")]\n",
     "    print(\"Embeddings len:\", len(embeddings))\n",
-    "    await upsert_points_rest(embeddings, partitions)\n",
+    "    upsert_points(embeddings, partitions)\n",
     "\n",
-    "async def search_points_rest(query_embedding, k=5):\n",
-    "    url = f\"{qdrant_url}/collections/{collection_name}/points/search\"\n",
-    "    payload = {\n",
-    "        \"vector\": query_embedding.tolist(),\n",
-    "        \"limit\": k,\n",
-    "        \"with_payload\": True\n",
-    "    }\n",
-    "    async with aiohttp.ClientSession() as session:\n",
-    "        async with session.post(url, json=payload) as response:\n",
-    "            if response.status == 200:\n",
-    "                result = await response.json()\n",
-    "                return result[\"result\"]\n",
-    "            else:\n",
-    "                print(f\"Error in search query: {response.status}\")\n",
-    "                return []\n",
+    "def search_points(query_embedding, k=5):\n",
+    "    search_result = client.search(\n",
+    "        collection_name=collection_name,\n",
+    "        query_vector=query_embedding.tolist(),\n",
+    "        limit=k,\n",
+    "        with_payload=True\n",
+    "    )\n",
+    "    return [hit.payload[\"text\"] for hit in search_result]\n",
     "\n",
-    "async def retrieve_with_rag(query, k=2):\n",
-    "    query_embedding = (await get_embeddings([query]))[0]\n",
-    "    search_result = await search_points_rest(query_embedding, k)\n",
-    "\n",
-    "    retrieved_docs = [hit[\"payload\"][\"text\"] for hit in search_result]\n",
+    "def ask(query, k=2, p=False):\n",
+    "    query_embedding = get_embedding(query)\n",
+    "    retrieved_docs = search_points(query_embedding, k)\n",
     "    combined_docs = \"\\n\".join(retrieved_docs)\n",
     "    \n",
     "    inst = \"Instruction: If you do not find the answer in the context, just say you don't know.\"\n",
     "    rag_prompt = f\"{inst}\\n\\nContext:\\n{combined_docs}\\n\\nQuery: {query}\\nAnswer:\"\n",
-    "    \n",
-    "    async with aiohttp.ClientSession() as session:\n",
-    "        payload = {\"model\": ollama_model_name, \"prompt\": rag_prompt, \"stream\": False}\n",
-    "        headers = {\"Content-Type\": \"application/json\"}\n",
-    "        async with session.post(ollama_url_gen, headers=headers, data=json.dumps(payload)) as response:\n",
-    "            return await response.json()\n",
-    "\n",
-    "async def ask(query):\n",
-    "    rag_response = await retrieve_with_rag(query)\n",
-    "    print(rag_response.get(\"response\", \"No response available\"))\n",
+    "    if p:\n",
+    "        print(rag_prompt)\n",
+    "    payload = {\"model\": \"llama3.2:latest\", \"prompt\": rag_prompt, \"stream\": False}\n",
+    "    headers = {\"Content-Type\": \"application/json\"}\n",
+    "    response = requests.post(ollama_url_gen, headers=headers, data=json.dumps(payload))\n",
+    "    print(response.json().get(\"response\", \"No response available\"))\n",
     "\n",
     "partitions = partition_text(all_text, max_length=512)\n",
     "print(f'Total partition count: {len(partitions)}')\n",
-    "\n",
     "try:\n",
-    "    await store_in_qdrant(partitions)\n",
+    "    store_in_qdrant(partitions)\n",
     "except Exception as e:\n",
     "    print(f\"Error storing in Qdrant: {e}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "df1981e1",
+   "execution_count": 5,
+   "id": "30126d7c",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "905ef2149b82428d9267ef23041385b0",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "Fetching embeddings:   0%|          | 0/1 [00:00<?, ?it/s]"
+       "'He has over 13 years of experience in mobile and wearable software development, with expertise in OOP, Android (Java, Kotlin), iOS (Swift, Objective-C), Xcode, Version Control Systems, System Design, Application Architecture, Development Processes, Wearable & Hearable Technology.'"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
-    },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ask(\"What is Hissains experience?\", 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1b5019e8",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error in search query: 400\n",
-      "I don't know.\n"
+      "He is interested in several things, including:\n",
+      "\n",
+      "1. Technological Innovation\n",
+      "2. Human-Machine Interaction\n",
+      "3. Information Theory\n",
+      "4. Astronomy\n",
+      "5. Probability\n",
+      "6. Theory of Relativity\n",
+      "7. Philosophy of Science\n",
+      "\n",
+      "And also he enjoys music and playing piano and guitar as a special interest\n"
      ]
     }
    ],
    "source": [
-    "await ask(\"Whats Hissains special interest?\")"
+    "ask(\"Whats Hissains special interest?\", 2)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (myenv)",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
